--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -1,9 +1,9 @@
 {% extends "layout.html" %}
 {% block body %}
-<p>Most claims that are made in a typical scientific paper are based on work done by other scientists. That is how science works. But when scientists <i>approvingly</i> cite---cite without noting any concern---problematic research, this bedrock of science turns to mush. The aim of this tool is to prevent that.
+<p>Developers of open source Python packages sometimes envy R developers for the simple perks they enjoy, like a reliable web service that gives a reasonable count of the total number of times an R package has been downloaded. To achieve the same, Python developers must launch a Google Query and wait for generally 30 or so seconds. 
 
-The geneis of <a href="http://re-cite.org">re-cite.org</a> is in a <a href="http://github.com/recite/prop_error/">paper</a>. The paper shows that retracted articles continue to be <i>approvingly</i> cited in published research long after a retraction notice has been published. To help scientists and academic publishers avoid making this error, we are making this tool freely available. We are also making the code underneath the web application freely available on <a href="http://github.com/recite/re-cite.org">Github</a>.
+Then there are sore spots that are shared by both R and Python developers. Downloads are a shallow metric. Developers often want to know how often is it that other people writing Python scripts and packages using their package. We partly solve this latter problem for Python developers by pooling search results from Github. 
 
-We shall be grateful for any ideas or suggestions. We shall also be grateful if you alert us to something that doesn't work. To keep us going, please also share stories about how the tool has helped you. Please reach out to us via the <a href="contact.html">Contact page</a> or open an issue on Github. We look forward to hearing from you.
+<a href = "http://countpy.com">http://countpy.com</a> delivers the number of times a package has been called in the requirements file, and how often it is called in the import statement of any repository in Python.
 </p>
 {% endblock %}
