Attach GoogleAds script to site.

--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -14,6 +14,13 @@
   <script src="{{ file|static_url }}"></script>
   {% endfor %}
 {%- endif -%}
+  <script async src="http://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <script>
+    (adsbygoogle = window.adsbygoogle || []).push({
+      google_ad_client: "ca-pub-7972332319089521",
+      enable_page_level_ads: true
+    });
+  </script>
 </head>
 <body>
 <header class="navbar navbar-expand-lg navbar-dark bg-dark">
