--- a/app/templates/detail.html
+++ b/app/templates/detail.html
@@ -1,11 +1,7 @@
 {% extends "index.html" %}
 {% block result %}
 {%- if results -%}
-  {%- if total %}
-    {%- set rtitle = total|string + ' results found' %}
-  {%- else %}
-    {%- set rtitle = 'Results' %}
-  {%- endif %}
+  {%- set rtitle = 'Package: ' + pkgname + ' (' + numrepos|string + ' repos)' -%}
   <div class="mt-5">
     <h4 class="float-left font-weight-bold mb-5 font-italic">{{ rtitle }}</h4>
     <table class="table table-hover">
