--- a/app/templates/result.html
+++ b/app/templates/result.html
@@ -1,4 +1,5 @@
 {% extends "index.html" %}
+{% from 'helpers.html' import render_table %}
 {% block result %}
 {%- if results -%}
   {%- if total %}
@@ -7,25 +8,7 @@
     {%- set rtitle = 'Results' %}
   {%- endif %}
   <div class="mt-5">
-    <h4 class="float-left font-weight-bold mb-5 font-italic">{{ rtitle }}</h4>
-    <table class="table table-hover">
-    {%- for row in results %}
-      {%- if row and loop.first %}
-        {%- set rtag = 'thead' %}
-        {%- set ctag = 'th' %}
-      {%- else %}
-        {%- set rtag = 'tbody' %}
-        {%- set ctag = 'td' %}
-      {%- endif %}
-      <{{ rtag  }}>
-        <tr>
-        {%- for cell in row %}
-          <{{ ctag }}>{{ cell|safe }}</{{ ctag }}>
-        {%- endfor %}
-        </tr>
-      </{{ rtag }}>
-    {%- endfor %}
-    </table>
+    {{ render_table(rtitle, results) }}
   </div>
 {%- endif -%}
 {% endblock %}
